--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,7 +1,4 @@
-# This workflow will build a Java project with Gradle
-# For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-gradle
-
-name: Java CI with Gradle
+name: Gradle Build
 
 on:
   push:
@@ -15,19 +12,23 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    
     - uses: actions/checkout@v2
-      
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
-        
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
-      
-    - name: Setup Decomp Workspace
-      run: ./gradlew setupDecompWorkspace
-      
     - name: Build with Gradle
-      run: ./gradlew build
+      run: |
+        ./gradlew setupDecompWorkspace
+        ./gradlew build
+    - name: List files
+      run: ls
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v2
+      with:
+       # Artifact name
+       name: Ferox-1.12.2
+       # A file, directory or wildcard pattern that describes what to upload
+       path: ./build/libs/*-release.jar
